[metadata]
name = cmarkwrapper
version = attr: cmarkwrapper.__version__
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    tests
filterwarnings =
    ignore::UserWarning
