[metadata]
name = cmarkwrapper
version = attr: cmarkwrapper.__version__
project_urls =
    Source Code = https://github.com/yangfan9702/cmarkwrapper

license = BSD License
description = cmarkwrapper是一个基于paka.cmark的cmark封装，更加符合使用习惯。
platforms = any

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    tests
filterwarnings =
    ignore::UserWarning
